--- a/_data/data.yml
+++ b/_data/data.yml
@@ -3,9 +3,9 @@
 #
 
 sidebar:
-    position: right # position of the sidebar : left or right
-    about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
-    education: True # set to False if you want education in main section instead of in sidebar
+    position: left # position of the sidebar : left or right
+    about: False # set to False or comment line if you want to remove the "how to use?" in the sidebar
+    education: False # set to False if you want education in main section instead of in sidebar
 
     # Profile information
     name: Andreas Credé
@@ -18,9 +18,9 @@ sidebar:
     # timezone: Europe/Berlin Timezone
     # citizenship:
     # website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    xing: alandoe
-    github: sharu725
+    linkedin: https://www.linkedin.com/in/andreas-cred%C3%A9-2ba550101/
+    # xing: alandoe
+    github: acrede
     # telegram: # add your nickname without '@' sign
     # gitlab:
     # bitbucket:
@@ -58,7 +58,7 @@ sidebar:
           link:
 
 career-profile:
-    title: Career Profile
+    title: Summary
     summary: |
       Summarise your career here lorem ipsum dolor sit amet, consectetuer
       adipiscing elit. You can [download this free resume/CV template here]().
