--- a/_data/data.yml
+++ b/_data/data.yml
@@ -205,7 +205,10 @@ skills:
         level: 90%
 
       - name: Django
-        level: 75%
+        level: 80%
+
+      - name: Docker
+        level: 60%
 
 # footer: >
     # Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
