--- a/_data/data.yml
+++ b/_data/data.yml
@@ -76,8 +76,10 @@ education:
           blends advanced mathematical principles with a strong foundation in economics and computer science.
           This interdisciplinary education has equipped me with a robust skill set,
           making me well-suited for many different data roles.
-          My studies taught me a quantitative mindset, analytical prowess, and a solid understanding
-          of economic principles.
+
+            - Quantitative mindset
+            - Analytical prowess
+            - Solid understanding of economic principles
 
 experiences:
     title: Experiences
@@ -105,16 +107,17 @@ experiences:
             - Bullet point
 
       - role: Data Engineer
-        time: 2012 - 2014
-        company: ETL Managed Services
+        time: 2020 - 2021
+        company: ETL AG
         details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
+          My primary role was to develop an innovative solution for the
+          audit needs of our customers. This was achieved by modernizing
+          the tech stack and moving away from Excel-driven analytics and
+          building a modern analytical tool on top of
+          a centralized data warehouse.
+            - Modernization of IT infrastructure
+            - Building a data warehouse
+            - Development of a modern analytical toolset for auditing
 
       - role: Financial Analyst
         time: 2019 - 2020
@@ -122,6 +125,18 @@ experiences:
         details: |
           Describe your role here lorem ipsum dolor sit amet, consectetuer
           adipiscing elit. Aenean commodo ligula eget dolor.
+
+      - role: Data Scientist
+        time: 2018
+        company: Kroschke sign-international
+        details: |
+          Database Marketing
+      
+      - role: Working Student Risk Management
+        time: 2016 - 2018
+        company: Volkswagen Bank
+        details: |
+          Automation
 
 # certifications:
 #       title: Certifications
