database marketing added

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -144,7 +144,9 @@ experiences:
         time: 2018
         company: Kroschke sign-international
         details: |
-          Database Marketing
+          During my studium I was able to work part-time with a team of data scientists
+          on developing machine learning models for targeted marketing and recommendation
+          systems.
       
       - role: Working Student Risk Management
         time: 2016 - 2018
