Working student added

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -152,7 +152,16 @@ experiences:
         time: 2016 - 2018
         company: Volkswagen Bank
         details: |
-          Automation
+          In my role withing Risk Management I led the automation and refinement of
+          manual reporting procedures. Utilizing my expertise in databases, APIs and
+          Excel/VBA, I was able to significantly increase operational efficieny.
+          A crucial aspect of my responsibilities involved not only automating existing
+          processes but also innovating and advancing reporting systems to meet evolving
+          business needs.
+
+            - Automation and enhancement of manual reporting processes with VBA
+            - Streamlining data processing with database management tools
+            - Implementation of data quality and testing procedures for reporting
 
 # certifications:
 #       title: Certifications
