fixed job description

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -108,7 +108,7 @@ experiences:
             - Foster a data-driven culture within the organization
             - Adoption and implementation of a modern data stack.
 
-      - role: Business Intelligence Developer
+      - role: Business Intelligence Analyst
         time: 10/2021 - 02/2023
         company: PŸUR | Tele Columbus
         details: |
