--- a/_data/data.yml
+++ b/_data/data.yml
@@ -18,7 +18,9 @@ sidebar:
     # timezone: Europe/Berlin Timezone
     # citizenship:
     # website: blog.webjeda.com #do not add http://
-    linkedin: https://www.linkedin.com/in/andreas-crede
+    linkedin:
+      - title: andreas-crede
+        link: https://www.linkedin.com/in/andreas-crede
     # xing: alandoe
     github: acrede
     # telegram: # add your nickname without '@' sign
