--- a/_data/data.yml
+++ b/_data/data.yml
@@ -18,9 +18,7 @@ sidebar:
     # timezone: Europe/Berlin Timezone
     # citizenship:
     # website: blog.webjeda.com #do not add http://
-    linkedin:
-      title: andreas-crede
-      link: https://www.linkedin.com/in/andreas-crede
+    linkedin: andreas-crede
     # xing: alandoe
     github: acrede
     # telegram: # add your nickname without '@' sign
