--- a/_data/data.yml
+++ b/_data/data.yml
@@ -14,7 +14,7 @@ sidebar:
 
     # Sidebar links
     email: andreas.crede@gmail.com
-    # phone: 012 345 6789
+    phone: +49 157 31565673
     # timezone: Europe/Berlin Timezone
     # citizenship:
     # website: blog.webjeda.com #do not add http://
