--- a/_data/data.yml
+++ b/_data/data.yml
@@ -169,7 +169,7 @@ experiences:
           - name: VBA
           - name: VB.NET
         details: |
-          I rejoined my department where I worked on as working student and took more
+          I rejoined my department where I worked in as working student and took more
           responsiblity for the reporting processes in Risk Management and other departments.
           This included developing and automating the existing reports and working together
           with other business teams to create new insights from data.
